# sectora-horizon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.infra/: README.md  bd.sql
.infra/database/postgresql/: docker-compose.yml
.infra/network/: README.md  docker-compose.yml
.infra/secure/wireguard/: README.md  docker-compose.yml
.infra/service/metabase/: docker-compose.yml
.infra/service/pgadmin4/: docker-compose.yml
data/: README.md  datasets.yaml
data/processed/: ciiu.csv  colombia_departamentos.geojson  macro_economic_year.csv  pib_sector_year.csv  resultados_predicciones_2025.csv
data/raw/: EstructuraDetalladaCIIU_4AC.xls  IPCanual.csv  banrep.xlsx  colombia-municipios.json  tablaciiu2022.xlsx
docs/: dev_guide.md  domain.md  experiment_desing.md  main.md  tasks.md
models/: features.pkl  modelo_general.txt  modelo_servicios.txt
sandbox/: Sectora_Horizon.ipynb  ingest.ipynb  main_eda.ipynb
sandbox/dani/: EDA_superintendencia.ipynb
sandbox/dari/: ban_rep.ipynb  ciiu.ipynb  divipola.ipynb  empresas_10k.ipynb  pib.ipynb
sandbox/jose/: etl.ipynb
sandbox/juanp/: model.ipynb
scripts/etl/: main_etl.py
scripts/inference/: main.py
src/: config.py
src/adapter/entities/: ciiu.py  company.py  location.py  macroeco.py  predicted.py  year.py
src/envt/: config.py
src/helper/logging/: logger.py  service.py
src/ingest/: catalog.py  dataset.py  errors.py  loader.py
src/ingest/fetch/: csv.py  excel.py  metadata.py  raw.py  (+2 more)
src/logging/: service.py
src/service/: etl.py
src/utils/: clean.py  uuid.py
