[project]
name = "data-ecosystem"
version = "0.1.0"
description = "Data Ecosystem Challenge"
requires-python = ">=3.10"
authors = [{ name = "Equipo Data Ecosystem" }]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "ipykernel"]
ml = ["pandas", "numpy", "scikit-learn"]
viz = ["matplotlib", "seaborn", "plotly"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
