[project]
name = "data-ecosystem"
version = "0.1.0"
description = "Data Ecosystem Challenge"
requires-python = ">=3.10"
authors = [{ name = "Equipo Data Ecosystem" }]

dependencies = [
    "PyYAML==6.0.2",
    "openpyxl==3.1.3",
    "xlrd==2.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "black==24.4.2",
    "ruff==0.4.4",
    "ipykernel==6.29.4",
    "mypy==1.10.0"
]

ml = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "rapidfuzz"
]

pg = [
    "psycopg2-binary==2.9.3",
    "sqlalchemy==2.0.44"
]

viz = [
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "plotly==5.22.0"
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
